<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_offboard_lowlevel</name>
  <version>1.0.0</version>
  <description>Low-level control of PX4 Multi-rotor vehicles in Offboard mode (python)</description>
  <maintainer email="dung839224@gmail.com">KZyred</maintainer>
  <license>TODO: License declaration</license>

  <depend>px4_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>